Change log for Bos Wars
-----------------------

Development version:
- Add portuguese (pt-pt) translation (Tiago Faria)
- Add the 4on4 map (Michiel van der Wulp)
- Add the hospitality map (Kyran Jackson)
- Add italian translation (Simone Rucci)
- Fix bug #29110 "Fatal error 'bad player' when loading map to editor"
  (Francois Beerten)
- Discard NewOrder if it refers to destroyed unit (Kalle Olavi Niemitalo)
- Recover map specific triggers and settings when loading a saved game (Francois Beerten)
- Add the bottleneck map (Kyran Jackson)
- Make GLMaxTextureSize configurable for systems where the value reported
  by OpenGL causes slow displays (Kalle Olavi Niemitalo)
- Add the Go-East map (Michiel van der Wulp)
- Added a new background image for the swindler campaign (Johannes Engelhardt, Francois Beerten)
- Add the lava-river map (Michiel van der Wulp)
- Add the Swindler campaign (Francois Beerten and Ruben Diaz)
- Fix teams in UnSelectUnit (Kalle Olavi Niemitalo)
- Removed broken elites campaign and maps (Francois Beerten)
- Add code for dumping all received SDL events to stdout
  (Kalle Olavi Niemitalo)
- Work around bug #27982 mouse centered when clicking in the window after
  having left. (Kalle Olavi Niemitalo and Francois Beerten)
- Fix bug #25178 in patch editor; mouse placement confusion (Jimmy Salmon)
- Nukes target the center of the target. (Jann Horn)
- Fix use of settings from pkg-config in SCons. (Francois Beerten)
- Replace the deprecated SCons Options class by Variables.
  This requires SCons 0.98.1 or higher. (Francois Beerten)
- Replace the deprecated SCons calls to env.Copy by calls to env.Clone.
  This requires SCons 0.96.93 or higher. (Francois Beerten)
- Remove incomplete Dorcoz unit (Francois Beerten)
- Fix header includes for GCC 4.4 (Francois Beerten)
- Add the "grass" set of patches (Johannes Engelhardt)
- Added undo and redo to the editor (Jimmy Salmon)
- Add new defeat background graphic (Johannes Engelhardt)